# chonker8

./: .gitignore  CLEANUP_SUMMARY.md  COMPLETE_IMPLEMENTATION.md  CROSSTERM_INTEGRATION.md  Cargo.toml  DOCUMENT_AI_COMPLETE.md  FERRULES_HYBRID_PLAN.md  FERRULES_REPLACEMENT_PLAN.md  IMPLEMENTATION_COMPLETE.md  LANCE_MIGRATION.md  LAYOUTLM_INTEGRATION_COMPLETE.md  MIGRATION_COMPLETE.md  OCR_MODEL_RECOMMENDATIONS.md  PDFIUM_REMOVAL_COMPLETE.md  README.md  TEST_REPORT.md  TROCR_MIGRATION_COMPLETE.md  USE_TESSERACT.md  capture_output.sh  chonker  chonker8  cleanup_goofy_stuff.sh  comprehensive_test.sh  debug_pdf_load.sh  demo_all_features.sh  demo_chonker8_hot.py  demo_orchestration.rs  deploy_document_ai.rs  deploy_ui.sh  dev.sh  download_correct_models.sh  download_models_hf.sh  download_oar_models.sh  download_paddle_models.sh  download_ppocr_models.sh  download_trocr_onnx.py  download_trocr_onnx.sh  final_demo.rs  final_verification.sh  fix_split_view.rs  (+112 more)
Testing_the_waters_for_floating_class_7-results/: Testing_the_waters_for_floating_class_7.json
models/: layoutlm_placeholder.txt
src/: ab_comparison_integration.rs  ascii_display.rs  build_system.rs  config.rs  content_extractor.rs  content_extractor.rs.save  debug_capture.rs  debug_panel.rs  edit_renderer.rs  enhanced_ab_ui.rs  file_picker.rs  file_picker_screen.rs  hot_reload_manager.rs  integrated_file_picker.rs  keyboard.rs  keyboard_simple.rs  kitty_protocol.rs  kitty_simple.rs  lib.rs  main.rs  main_hotreload.rs  main_simple.rs  migration_tool.rs  output_capture.rs  pathfinder_renderer.rs  pdf_renderer.rs  screen_mode.rs  skia_pdf_renderer.rs  system_pdf_renderer.rs  test_runner.rs  theme.rs  theme_const.rs  types.rs  ui_config.rs  ui_renderer.rs  ui_renderer_enhanced.rs  vello_pdf_renderer.rs  viuer_display.rs
src/controls/: file_picker.rs  keyboard.rs
src/pdf_extraction/: ai_powered.rs  basic.rs  braille.rs  conductor.rs  document_ai.rs  document_ai_simple.rs  document_analyzer.rs  document_processor.rs  document_understanding.rs  extraction_router.rs  extractous_extraction.rs  ferrules_extraction.rs  ferrules_extraction.rs.backup_temp  hybrid_extraction.rs  improved.rs  layoutlm_extraction.rs  lopdf_helper.rs  mod.rs  oar_extraction.rs  ocr_engine.rs  pdfium_singleton.rs  pdftotext_extraction.rs  tokenizer.rs  trocr_extraction.rs  true_visual.rs  ui_api.rs
src/storage/: duckdb_storage.rs  duckdb_storage.rs.bak  lance_backend.rs  legacy_storage.rs  mod.rs  sqlite_compat.rs  sqlite_storage.rs
src/theme/: colors.rs
src/views/status_bar/: mod.rs
src/views/text_editor/: mod.rs
tests/: conductor_iteration.rs  duckdb_integration_test.rs  extraction_quality.rs  ferrules_integration.rs  integration_test.rs  model_comparison_test.rs  ocr_integration_test.rs  rexpect_orchestration_test.rs  test_extraction_orchestration.rs  visible_output.rs
