[package]
name = "chonker8"  
version = "8.8.0"
edition = "2021"

[dependencies]
# Core CLI
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync"] }
thiserror = "1.0"

# Hot-reload TUI
notify = "6.1"
crossterm = "0.27"
toml = "0.8"

# PDF extraction - JUST THE ESSENTIALS
tokenizers = { version = "0.19", features = ["onig"] }
ort = { version = "2.0.0-rc.10", features = ["coreml"] }
ndarray = "0.15"
image = "0.25"
pdfium-render = { version = "0.8", features = ["thread_safe"] }
tempfile = "3.8"
regex = "1.10"

# Storage - Simple SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

[[bin]]
name = "chonker8"
path = "src/main.rs"

[[bin]]
name = "chonker8-hot"
path = "src/main_hotreload.rs"

[[bin]]
name = "pdf-processor"
path = "src/bin/pdf_processor.rs"


[dev-dependencies]
rexpect = "0.5"
